# stackmatrix

./: Cargo.toml  LICENSE  README.md
benches/: matmul.rs
src/: lib.rs
