[package]
name = "stackmatrix"
version = "0.1.0"
edition = "2024"
author = ["staticdispatchlover"]
repository = "https://github.com/staticdispatchlover/stackmatrix"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matmul"
harness = false

[dependencies]


[profile.release]
opt-level = 3
lto = true

